--- a/package.json
+++ b/package.json
@@ -64,7 +64,10 @@
   "dependencies": {
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
+    "redux": "^4.0.0",
+    "redux-devtools-extension": "^2.13.5",
     "uuid": "^3.3.2"
   }
 }
