--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "test-nolint": "jest --coverage",
     "watch": "webpack-dev-server --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
-    "lint": "eslint --fix ."
+    "lint": "eslint --fix .",
+    "start": "npm run build && node index.js",
+    "heroku-prebuild": "npm uninstall cypress",
+    "heroku-postbuild": "webpack --progress --config webpack.prod.js"
   },
   "repository": {
     "type": "git",
