--- a/package.json
+++ b/package.json
@@ -67,10 +67,12 @@
   "dependencies": {
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "file-loader": "^1.1.11",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.5",
+    "superagent": "^3.8.3",
     "uuid": "^3.3.2"
   }
 }
