--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "express": "^4.16.3",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
+    "react-table": "^6.8.6",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.5",
     "uuid": "^3.3.2"
