--- a/package.json
+++ b/package.json
@@ -65,9 +65,15 @@
     "webpack-merge": "^4.1.3"
   },
   "dependencies": {
+    "bootstrap": "^4.1.3",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "faker": "^4.1.0",
     "file-loader": "^1.1.11",
+    "immutability-helper": "^2.7.1",
+    "raw-loader": "^0.5.1",
+    "react-data-grid": "^4.0.7",
+    "react-data-grid-addons": "^4.0.8",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-table": "^6.8.6",
