--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "webpack-merge": "^4.1.3"
   },
   "dependencies": {
+    "base-64": "^0.1.0",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "file-loader": "^1.1.11",
