--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.5",
     "superagent": "^3.8.3",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.2",
+    "validator": "^10.5.0"
   }
 }
