--- a/package.json
+++ b/package.json
@@ -65,12 +65,17 @@
     "webpack-merge": "^4.1.3"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.0-14",
+    "@fortawesome/free-solid-svg-icons": "^5.1.0-11",
+    "@fortawesome/react-fontawesome": "0.1.0-11",
     "bootstrap": "^4.1.3",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "faker": "^4.1.0",
     "file-loader": "^1.1.11",
+    "i": "^0.3.6",
     "immutability-helper": "^2.7.1",
+    "npm": "^6.3.0",
     "raw-loader": "^0.5.1",
     "react-data-grid": "^4.0.7",
     "react-data-grid-addons": "^4.0.8",
@@ -80,6 +85,7 @@
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.5",
     "superagent": "^3.8.3",
+    "url-loader": "^1.0.1",
     "uuid": "^3.3.2"
   }
 }
