--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "webpack-merge": "^4.1.3"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.2.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.0-14",
     "@fortawesome/free-solid-svg-icons": "^5.1.0-11",
     "@fortawesome/react-fontawesome": "0.1.0-11",
@@ -74,6 +75,7 @@
     "express": "^4.16.3",
     "faker": "^4.1.0",
     "file-loader": "^1.1.11",
+    "font-awesome": "^4.7.0",
     "fontawesome": "^4.7.2",
     "i": "^0.3.6",
     "immutability-helper": "^2.7.1",
