--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "raw-loader": "^0.5.1",
     "react-data-grid": "^4.0.7",
     "react-data-grid-addons": "^4.0.8",
+    "react-icons": "^3.0.5",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-table": "^6.8.6",
