navbar bootstrap integration

--- a/package.json
+++ b/package.json
@@ -79,7 +79,9 @@
     "fontawesome": "^4.7.2",
     "i": "^0.3.6",
     "immutability-helper": "^2.7.1",
+    "jquery": "^3.3.1",
     "npm": "^6.3.0",
+    "popper.js": "^1.14.4",
     "raw-loader": "^0.5.1",
     "react-data-grid": "^4.0.7",
     "react-data-grid-addons": "^4.0.8",
