--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
   "presets": ["react", "env"],
-  "plugins": ["transform-object-rest-spread", "transform-class-properties", "emotion"]
+  "plugins": ["transform-object-rest-spread", "transform-class-properties"]
 }
