--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "i": "^0.3.6",
     "immutability-helper": "^2.7.1",
     "jquery": "^3.3.1",
+    "moment": "^2.22.2",
     "npm": "^6.4.1",
     "popper.js": "^1.14.4",
     "raw-loader": "^0.5.1",
