--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "react-icons": "^3.0.5",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
+    "react-select": "^2.4.1",
     "react-table": "^6.8.6",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.5",
